Opened 17 years ago

Closed 16 years ago

#1820 closed bug (fixed)

[DataTranslations] Scrollbar don't move on End key press (easy)

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Current count of translators caused appearing of scrolabar in DataTranslations. Now last item (WonderBrush Translator) is only partialy shown.

Current behaivor: Pressing End key don't trigger scrollbar position.

Expected behavior Pressing End key, shlould make scrollbar to move to the bottom arrow and vice versa.

Attachments (1)

datatrans_scrollbar.png (60.4 KB ) - added by diver 17 years ago.

Download all attachments as: .zip

Change History (9)

comment:1 by jackburton, 17 years ago

Resolution: invalid
Status: newclosed

I'll mark this as invalid as it's working. Maybe it simply got fixed in the meantime, though :)

comment:2 by diver, 17 years ago

Resolution: invalid
Status: closedreopened

Yeah, WonderBrush Translator is shown fully now, but a problem with not movable scrollbar is still here in hrev24424. Reopening...

in reply to:  2 comment:3 by jackburton, 17 years ago

Replying to diver:

Yeah, WonderBrush Translator is shown fully now, but a problem with not movable scrollbar is still here in hrev24424. Reopening...

Can you explain the steps to reproduce ? Here's how I verified that the scrollbar is moving correctly:

  • Set the font size to 13, so the Translators list doesn't fit into the window
  • Open DataTranslation
  • Hit "End".

by diver, 17 years ago

Attachment: datatrans_scrollbar.png added

comment:4 by diver, 17 years ago

I use default font and font size. When i open DataTranslation i see a little space in the bottom of scrollbar. I expect scrollbar to move down to this space when I hitting "End".

comment:5 by diver, 17 years ago

Still here in hrev25655.

comment:6 by diver, 16 years ago

Still in hrev28509

comment:7 by diver, 16 years ago

Summary: [DataTranslations] Scrollbar don't move on End key press[DataTranslations] Scrollbar don't move on End key press (easy)

comment:8 by stpere, 16 years ago

Resolution: fixed
Status: reopenedclosed

Hi, I committed a fix for this in hrev30689. Thanks!

Note: See TracTickets for help on using tickets.