Make ScrollToSelection() use "Contains" rather than an "Intersects" to determine if it should scroll.

This make the end key work (trigger the scroll) if the last item is overlapping the bottom boundary.

This fixes bug #1820.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30689 a95241bf-73f2-0310-859d-f6bbb57e9c96